updated images alignment

--- a/homepage.html
+++ b/homepage.html
@@ -508,7 +508,7 @@
         </div>
     </div>
 
-    <div id="banner"> <img src="https://banner.caratlane.com/live-images/abcad7eebdfe409a884cba533e4f1460.webp" alt=""
+    <div id="banner"> <img src="https://banner.caratlane.com/live-images/1283319ccb6543bab1ae68bbf046b379.jpg" alt=""
             class="img">
     </div>
 
