added login page

--- a/signup.html
+++ b/signup.html
@@ -80,7 +80,7 @@
       <button id="reg">Register to Continue</button>
       <div id="last">
         <div>Already have an account?</div>
-        <div><a id="log" href="logIn.html">Log In!</a></div>
+        <div><a id="log" href="login.html">Log In!</a></div>
       </div>
     </div>
   </body>
