--- a/pay.html
+++ b/pay.html
@@ -77,7 +77,8 @@
         border: none;
 
         border-radius: 5px;
-        background: linear-gradient(to right, blue 43%, purple 57%);
+        background-color: #c850c0;
+        background-image: linear-gradient(59deg, #c850c0 38%, #4158d0 78%);
         /* margin-top: 20px; */
     }
     #i5:hover{
@@ -100,6 +101,7 @@
         font-family: sans-serif;
         font-size: 25px;
     }
+
     </style>
 </head>
 <body>
@@ -119,7 +121,7 @@
             <input  id="i3" type="Date" id="expiry">
             <label id="l4"> CVV</label>
             <input id="i4" type="number" id="cvv">
-            <input id="i5" type="submit" name="Pay Now" id="Pay Now">
+            <input id="i5" type="submit"  name="Pay Now" id="Pay Now">
 
         </form>
 
@@ -164,7 +166,7 @@ function checkoutFunction(){
     if (ask) {
         // window.alert("Th");
 
-        window.location.href = "checkout.html";
+        window.location.href = "homepage.html";
 
     }
 }
