udated project 15 : 11pm

--- a/checkout.html
+++ b/checkout.html
@@ -373,7 +373,7 @@
   <body>
       
      <div class="navbar">
-        <a  href="cart.html" class="prev"><i class="fa-solid fa-arrow-left"></i></a>
+        <a  href="homepage.html" class="prev"><i class="fa-solid fa-arrow-left"></i></a>
          <img src="https://www.reviewsxp.com/image/CARATLANE.jpg"
          alt=""
          />
