--- a/homepage.html
+++ b/homepage.html
@@ -25,7 +25,7 @@
     <div class="nav">
 
       <div class="dropdown">
-        <a href="#" class="dropbtn">RINGS</a>
+        <a href="ring.html" class="dropbtn">RINGS</a>
         <div class="dropdown-content" id="dc">
           <div class="mega-menu">
             <div class="left-menu">
@@ -155,7 +155,7 @@
         </div>
       </div>
       <div class="dropdown">
-        <a href="#" class="dropbtn">EARRINGS</a>
+        <a href="earring.html" class="dropbtn">EARRINGS</a>
         <div class="dropdown-content" id="dc">
           <div class="mega-menu">
             <div class="left-menu">
@@ -286,7 +286,7 @@
         </div>
       </div>
       <div class="dropdown">
-        <a href="#" class="dropbtn">BRACELETS & BANGLES</a>
+        <a href="bangles.html" class="dropbtn">BRACELETS & BANGLES</a>
         <div class="dropdown-content" id="dc">
           <div class="mega-menu">
             <div class="left-menu">
@@ -464,7 +464,7 @@
       <div><i class="fa-solid fa-circle"></i></div>
       <div><a href="login.html"><i class="fa-solid fa-user"></i></a></div>
       <div><i class="fa-solid fa-heart"></i></div>
-      <div><i class="fa-solid fa-cart-shopping"></i></div>
+      <div><a href="checkout.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
     </div>
   </div>
 
