--- a/pay.html
+++ b/pay.html
@@ -164,7 +164,7 @@ function checkoutFunction(){
     if (ask) {
         // window.alert("Th");
 
-        window.location.href = "checkout.html";
+        window.location.href =  "homepage.html";
 
     }
 }
