Created WishList Page

--- a/earring.html
+++ b/earring.html
@@ -31,7 +31,7 @@
       <option value="earrings.html">PRODUCT TYPE</option>
       <option value="ring.html">Rings</option>
       <option value="bangles.html">Bangles & Bracelets</option>
-      <option value="earrings.html">EarRings</option>
+      <option value="earring.html">EarRings</option>
     </Select>
     <select>
       <option>WEIGHT RANGES</option>
