--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,7 @@
         <div class="nav">
 
             <div class="dropdown">
-                <a href="#" class="dropbtn">RINGS</a>
+                <a href="ring.html" target="blank" class="dropbtn">RINGS</a>
                 <div class="dropdown-content" id="dc">
                     <div class="mega-menu">
                         <div class="left-menu">
@@ -174,7 +174,7 @@
                 </div> 
             </div>
             <div class="dropdown">
-                <a href="#" class="dropbtn">EARRINGS</a>
+                <a href="earring.html" target="blank" class="dropbtn">EARRINGS</a>
                 <div class="dropdown-content"  id="dc">
                     <div class="mega-menu">
                         <div class="left-menu">
@@ -315,7 +315,7 @@
                 </div>
             </div>
             <div class="dropdown">
-                <a href="#" class="dropbtn">BRACELETS & BANGLES</a>
+                <a href="bangles.html" target="blank" class="dropbtn">BRACELETS & BANGLES</a>
                 <div class="dropdown-content"  id="dc">
                     <div class="mega-menu">
                         <div class="left-menu">
