--- a/bangles.html
+++ b/bangles.html
@@ -22,7 +22,7 @@
       <option value="bangles.html">PRODUCT TYPE</option>
       <option value="ring.html">Rings</option>
       <option value="bangles.html">Bangles & Bracelets</option>
-      <option value="earrings.html">EarRings</option>
+      <option value="earring.html">EarRings</option>
     </Select>
     <select>
       <option>WEIGHT RANGES</option>
