--- a/ring.html
+++ b/ring.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ring Page</title>
     <link rel="stylesheet" href="product.css">
-</head>
+</head\>
 <body>
     <div>
         <div>
@@ -22,7 +22,7 @@
                 <option>PRODUCT TYPE</option>
                 <option value="ring.html">Rings</option>
                 <option value="bangles.html">Bangles & Bracelets</option>
-                <option value="earrings.html">EarRings</option>
+                <option value="earring.html">EarRings</option>
               </Select>
             <select>
                 <option>WEIGHT RANGES</option>
